--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <body>
 
   <div class="card">
-    <img src="logo.svg" alt="لوگو" class="logo">
+    <img src="LOGO.svg" alt="لوگو" class="logo">
 
     <h1>زیتون دکوریشن</h1>
     <p class="lead">طراحی و اجرای دکوراسیون، استیج و فضاآفرینی مراسم</p>
@@ -178,3 +178,4 @@
 
 </body>
 </html>
+
